# Python_OpenBootCamp

./: BasesDatos.py  Calculadora.py  ClasesAbstractas.py  Ejercicio10_python.py  Ejercicio11_python.py  Ejercicio12_python.py  Ejercicio13_pyhon.py  Ejercicio14_python.py  Ejercicio15_python.py  Ejercicio16_Python.py  Ejercicio17_python.py  Ejercicio18_python.py  Ejercicio19_python.py  Ejercicio20_python.py  Ejercicio21_python.py  Ejercicio22_python.py  Ejercicio23_python.py  Ejercicio2_python.rar  Ejercicio7_python.py  Ejercicio8_python.py  Ejercicio9_python.py  Entrada_y_Salida.py  Funciones_Builtin.py  Funciones_Python.py  GUI_python_1.py  GUI_python_2.py  GUI_python_3.py  Operaciones.py  POO_python.py  Python_flujos.py  README.md  miFichero.txt  miaplicacion.db  modulos_Python.py
arithmetic_formatter/: arithmetic_arranger.py  pyproject.toml  replit_zip_error_log.txt
testDjango/: db.sqlite3  manage.py
testDjango/catalogoPeliculas/: admin.py  apps.py  models.py  urls.py  views.py
testDjango/catalogoPeliculas/migrations/: 0001_initial.py  0002_genero_pelicula_director_pelicula_name_and_more.py
testDjango/catalogoPeliculas/templates/: baseGeneric.html  index.html
testDjango/misPeliculas/: asgi.py  settings.py  urls.py  wsgi.py
